Add configurable round timing settings and update documentation

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ DATA_DIR=./data
 MAX_PLAYERS_PER_ROUND=50
 ROUND_TIMEOUT_MINUTES=10
 POINTS_MAX=100
+
+# Round Timing Configuration (optional, in seconds)
+MIN_WAIT_TIME=30
+MAX_WAIT_TIME=120
